tests/reject/axiom.alg
sort S : Sort;
axiom foo(x : S) x = x;
